Version 1.2 - XXXX-XX-XX
 * Picard now requires at least Python 2.6
 * Removed support for AmpliFIND/PUIDs
 * It's now possible to download cover images without any plugin. Cover Art Archive images can be downloaded by image type

Version 1.1 - 2012-09-03
 * Always show basic tags in metadata comparison box, even if empty (title,
   artist, album, tracknumber, ~length, date) (PICARD-201)
 * Fixed AcoustID submission failure after removing files from Picard (PICARD-82)
 * Allow multi-select in new MetaDataBox for delete/remove tags (PICARD-194)
 * File browser remembers last directory/no longer crashes on OS X (PICARD-104)
 * Removed the "Run Picard" option from the Windows installer (PICARD-11)
 * Refreshing a non-album track correctly clears previous track metadata (PICARD-220)
 * Fixed the preserved tags setting for tags with uppercase characters (PICARD-217)
 * Added a completion box to the preserved tags setting, and clarified how it works
 * Store lyrics language in tags instead of text representation language (PICARD-242)
 * Fix various oddities in the metadata comparison box (PICARD-255, PICARD-256)

Version 1.0 - 2012-06-02
 * New UI: Extended comparison of existing vs. MB metadata & tags (PICARD-43)
 * Merged the renaming and moving options pages
 * Removed the VA file naming format option (there is now a single format option) (PICARD-159)
 * Add %license% tag
 * Made %writer% available to tagger scripts and plugins with contents of songwriter (PICARD-21)
 * Allow two multi-valued variables to be merged in tagger scripting (PICARD-139)
 * Allow multi-valued variables to be transformed in tagger script and then set back in tags as multi-valued (PICARD-147)
 * Fix $copy not preserving multi-value variables as documented (PICARD-138)
 * Load/save free-text tags for ID3 as TXXX frames (PICARD-148)
 * Fix writing of MusicBrainz Work Id / musicbrainz_workid to tags (PICARD-88)
 * Handle mimetype for embedding cover art from EXIF jpegs (PICARD-27)